@@ -3,12 +3,18 @@ package com.sixgroup.refit.observability.item35.creator.application.usecase;
 import com.sixgroup.refit.observability.item.state.application.StateService;
 import com.sixgroup.refit.observability.item.state.domain.model.StateRequest;
 import com.sixgroup.refit.observability.item35.creator.application.service.LogService;
+import com.sixgroup.refit.observability.item35.creator.application.service.ParticipantService;
+import com.sixgroup.refit.observability.item35.creator.application.service.RegulatorService;
+import com.sixgroup.refit.observability.item35.creator.application.service.TrService;
 import com.sixgroup.refit.observability.item35.creator.domain.enums.ItemType;
 import com.sixgroup.refit.observability.item35.creator.domain.model.ItemCommandDTO;
 import com.sixgroup.refit.observability.item35.creator.domain.model.ReportGenerationDto;
-import com.sixgroup.refit.observability.item35.creator.domain.service.*;
+import com.sixgroup.refit.observability.item35.creator.domain.service.ProducerItemService;
+import com.sixgroup.refit.observability.item35.creator.domain.service.WriteFileItem35Service;
 import com.sixgroup.refit.observability.item35.creator.domain.strategy.ItemTypeStrategy;
-import com.sixgroup.refit.observability.item35.creator.shared.utils.Utils;
+import com.sixgroup.refit.observability.item35.creator.shared.utils.CollectionsUtils;
+import com.sixgroup.refit.observability.item35.creator.shared.utils.DateUtils;
+import com.sixgroup.refit.observability.item35.creator.shared.utils.FileUtils;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
@@ -17,11 +23,7 @@ import org.apache.kafka.common.header.Headers;
 import org.springframework.stereotype.Service;
 
 import java.io.File;
-import java.text.ParseException;
-import java.text.SimpleDateFormat;
-import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static com.sixgroup.refit.observability.item35.creator.shared.constants.Constants.CREATING_AND_SAVING_FILE;
@@ -33,38 +35,35 @@ import static com.sixgroup.refit.observability.item35.creator.shared.constants.C
 public class UseCaseReportGeneration implements ItemTypeStrategy {
 
     private final WriteFileItem35Service<ReportGenerationDto> writeFileReportGenerationService;
-
     private final ProducerItemService producerItemService;
-
     private final StateService stateService;
-
     private final ParticipantService participantService;
     private final RegulatorService regulatorService;
     private final TrService trService;
 
     @Override
-    public File execute(ItemCommandDTO itemCommandDTO, Headers headers) {
+    public File execute(final ItemCommandDTO itemCommandDTO, final Headers headers) {
         log.debug("Generating Report Generation file ...");
-        File fileReportGeneration;
+        File fileReportGeneration = null;
         try {
             stateService.nextStep(
-                StateRequest.builder().fileName(Utils.getFileName(itemCommandDTO)).itemType(ITEM35).build());
+                StateRequest.builder().fileName(FileUtils.getFileName(itemCommandDTO)).itemType(ITEM35).build());
             LogService.logInfo(CREATING_AND_SAVING_FILE, itemCommandDTO);
 
-            String firstDayOfMonth = Utils.getFirstDayOfMonthAndYear(itemCommandDTO.getItemDate());
-            String firstDayOfNextMonth = Utils.getFirstDayOfNextMonthAndYear(itemCommandDTO.getItemDate());
+            final String firstDayOfMonth = DateUtils.firstDayOfMonth(itemCommandDTO.getItemDate());
+            final String firstDayOfNextMonth = DateUtils.firstDayOfNextMonth(itemCommandDTO.getItemDate());
 
-            List<ReportGenerationDto> participants = participantService.findParticipants(firstDayOfMonth,
+            final List<ReportGenerationDto> participants = participantService.findParticipants(firstDayOfMonth,
                 firstDayOfNextMonth, itemCommandDTO.getItemDate());
 
-            List<ReportGenerationDto> regulators = regulatorService.findRegulator(firstDayOfMonth,
+            final List<ReportGenerationDto> regulators = regulatorService.findRegulator(firstDayOfMonth,
                 firstDayOfNextMonth, itemCommandDTO.getItemDate());
 
-            List<ReportGenerationDto> trs = trService.findTr(firstDayOfMonth,
+            final List<ReportGenerationDto> trs = trService.findTr(firstDayOfMonth,
                 firstDayOfNextMonth, itemCommandDTO.getItemDate());
 
-            List<ReportGenerationDto> joinedCollection = Stream.concat(Stream.concat(participants.stream(),
-                regulators.stream()), trs.stream()).collect(Collectors.toList());
+            final List<ReportGenerationDto> joinedCollection = Stream.concat(Stream.concat(participants.stream(),
+                regulators.stream()), trs.stream()).toList();
 
             if (CollectionUtils.isEmpty(joinedCollection)) {
                 log.error("No data found in report generation, skipping report generation");
@@ -72,9 +71,10 @@ public class UseCaseReportGeneration implements ItemTypeStrategy {
                     ResourceNotFoundException("No data found in report generation, skipping report generation");
             }
 
-            List<ReportGenerationDto> orderedCollection = Utils.getOrderCollectionsByDate(joinedCollection);
+            final List<ReportGenerationDto> orderedCollection = CollectionsUtils.getOrderCollectionsByDate(joinedCollection);
 
             fileReportGeneration = writeFileReportGenerationService.writeFile(orderedCollection, itemCommandDTO);
+
             log.debug("Generated report generation file");
             itemCommandDTO.setFileUrl(fileReportGeneration.toString());
             itemCommandDTO.setFileName(fileReportGeneration.getName());
@@ -84,16 +84,12 @@ public class UseCaseReportGeneration implements ItemTypeStrategy {
             log.error("Error to generate file report generation: {}", e.getMessage(), e);
             stateService.setError(
                 StateRequest.builder()
-                    .fileName(Utils.getFileName(itemCommandDTO))
+                    .fileName(FileUtils.getFileName(itemCommandDTO))
                     .itemType(ITEM35)
                     .errorDescription("Error to generate file report generation: " + e.getMessage())
                     .build());
-            if (e instanceof ResourceNotFoundException) {
-                throw new RuntimeException(e.getMessage());
-            }
-            throw new RuntimeException(e);
-
         }
+        return fileReportGeneration;
     }
 
     @Override
